# hash-sha-256

./: CMakeLists.txt  LICENSE  README.md  main.c
lib/: H_Constants.h  K_Constants.h  chunkBreak.h  padding.h  sha256.h
src/: chunkBreak.c  padding.c  sha256.c
